src/APFP.css
.avatarStack-2Dr8S9 img,
.wrapper-1BJsBx[apfp-user-id] img {
    opacity: var(--user-avatar-opacity);
}
.APFP {
    background-image: var(--user-avatar-static);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}
.avatarSpeaking-2IGMRN + .APFP,
.speaking-3dBKhR + .APFP,
.speaking-B2MXPi + .APFP {
    background-image: var(--user-avatar-playing);
    -webkit-box-shadow: inset 0 0 0 2px hsl(139,calc(var(--saturation-factor, 1)*47.3%),43.9%),inset 0 0 0 3px var(--background-secondary);
    box-shadow: inset 0 0 0 2px hsl(139,calc(var(--saturation-factor, 1)*47.3%),43.9%),inset 0 0 0 3px var(--background-secondary);
}
.cozyMessage-3V1Y8y:hover .APFP,
.layout-2DM8Md:hover .avatarStack-2Dr8S9,
.selected-aXhQR6 .layout-2DM8Md .avatarStack-2Dr8S9,
.content-1Wq3SX:hover .APFP,
.wrapper-2QE8vf .APFP {
    background-image: var(--user-avatar-playing);
}
.avatarStack-2Dr8S9,
.wrapper-1BJsBx {
    background-image: var(--user-avatar-playing);
    border-radius: 50%;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}
.layout-2DM8Md .avatarStack-2Dr8S9 {
    background-image: var(--user-avatar-static);
    background-size: cover;
    border-radius: 50%;
}

